<resources>
    <string name="app_name">TravelChest</string>

    <string name="billboard_text">Test Billboard Test</string>
    <string name="billboard_dummy_title">Year Abroad</string>
    <string name="billboard_dummy_location">Helsinki</string>
    <string name="billboard_dummy_date">date</string>
    <string name="billboard_thumbnail_desc">Trip Thumbnail</string>
    <string name="billboard_image_btn_desc">Go to Trip Info</string>

    <string name="date_template">%1$s - %2$s</string>

    <string name="pref_file_head">File Options</string>
    <string name="pref_file_save_online">Save files in cloud</string>
    <string name="pref_file_save_online_desc">Save files in cloud</string>
    <string name="pref_theme_head">Theming</string>
    <string name="pref_theme_dark">Use dark theme</string>

    <string name="list_image_btn">Images</string>
    <string name="list_video_btn">Videos</string>
    <string name="list_audio_btn">Audios</string>

    <string name="home_picture_content_desc">Button to take a picture</string>
    <string name="home_movie_content_desc">Button to take a video</string>
    <string name="home_audio_content_desc">Button to record an audio</string>

    <string name="home_create_trip">Create new Trip</string>

    <string name="audiodialog_start">Start</string>
    <string name="audiodialog_stop">Stop</string>
    <string name="audiodialog_play">Play record</string>
    <string name="audiodialog_save">Save the record</string>
    <string name="audiodialog_cancel">Cancel</string>
    <string name="signed_out">Signed out</string>
    <string name="contentdescription_avatar">Avatar of the profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="nav_home">Home</string>
    <string name="nav_preferences">Preferences</string>
    <string name="nav_ar">Ar</string>
    <string name="not_connected">Not connected</string>
    <string name="nav_settings">Settings</string>

    <string name="label_fragment_home">Home</string>
    <string name="label_fragment_preferences">Preferences</string>
    <string name="label_fragment_ar">Augmented Reality</string>

    <string name="trip_label_name">Name</string>
    <string name="trip_name_hint">Name of the trip</string>
    <string name="trip_use_location">Use location</string>
    <string name="trip_search_city">Search city</string>
    <string name="trip_city_edittext">City of the trip</string>
    <string name="trip_label_date">Date</string>
    <string name="trip_date_button_label">Choose a date</string>
    <string name="trip_add_the_trip">Add the trip</string>
    <string name="home_ar_content_desc">Button to open ar view</string>
    <string name="home_file_content_desc">Button to import file from the phone</string>

    <string name="trip_info_end_trip">End Trip</string>
    <string name="trip_add_headline">Trip Info</string>
    <string name="trip_add_use_location">or use location</string>

</resources>
