<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.speciial.travelchest.ui.home.HomeFragment"
        android:label="@string/label_fragment_home" />
    <fragment
        android:id="@+id/nav_ar"
        android:name="com.speciial.travelchest.ui.ar.ArFragment"
        android:label="@string/label_fragment_ar" />
    <fragment
        android:id="@+id/nav_preferences"
        android:name="com.speciial.travelchest.ui.preferences.PreferencesFragment"
        android:label="@string/label_fragment_preferences" />
</navigation>