<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/audio_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/audio_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp" />

    <Button
        android:id="@+id/audio_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_audio_play"
        android:text="@string/audiodialog_play" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/audio_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_audio_record"
            android:text="@string/audiodialog_start" />

        <Button
            android:id="@+id/audio_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_audio_stop"
            android:text="@string/audiodialog_stop" />
    </LinearLayout>

    <Button
        android:id="@+id/audio_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_audio_save"
        android:text="@string/audiodialog_save" />

    <Button
        android:id="@+id/audio_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/audiodialog_cancel" />

</LinearLayout>