<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/home_create_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_create_trip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_card_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/home_menu_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_create_trip" />

    <LinearLayout
        android:id="@+id/home_menu_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/home_picture"
            android:backgroundTint="@color/trans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home_picture_content_desc"
            android:padding="10dp"
            android:src="@drawable/ic_home_camera" />

        <ImageButton
            android:id="@+id/home_video"
            android:backgroundTint="@color/trans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/home_movie_content_desc"
            android:padding="10dp"
            android:src="@drawable/ic_home_movie" />

        <ImageButton
            android:id="@+id/home_ar"
            android:backgroundTint="@color/trans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/home_ar_content_desc"
            android:padding="20dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_home_ar" />

        <ImageButton
            android:id="@+id/home_audio"
            android:backgroundTint="@color/trans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/home_audio_content_desc"
            android:padding="10dp"
            android:src="@drawable/ic_home_audio" />

        <ImageButton
            android:id="@+id/home_file"
            android:backgroundTint="@color/trans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/home_file_content_desc"
            app:srcCompat="@drawable/ic_home_file" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>